--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,19 @@ aside span{
     background-color: aqua;
 }
 
+.card{
+    font-size: 12px;
+}
+
+.fa-code{
+    padding: 5px;
+    margin-right: 5px;
+    background-color: #f26551;
+    color: white;
+    border-radius: 50%;
+}
+
+
 /* .class{
     background-color: #ffc107;
     height: 100px;
