--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ aside li{
     color: white;
     background-color: #1b72e8;
     padding: 20px 0;
+    height: 100px;
 }
 
 .breadcrumb li{
@@ -90,10 +91,13 @@ aside li{
     background-color: #165bba;
     border-radius: 20px;
 }
-
+/* offcanvas */
+.offcanvas{
+    --bs-offcanvas-width: 40%;
+}
 /* main bottom */
 /* #main_bottom{
-    background-color: aqua;
+    background-color: white;
 } */
 
 .card{
