--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ aside li{
 #main_top{
     color: white;
     background-color: #1b72e8;
-    padding: 20px 0;
+    padding-top: 20px;
     height: 100px;
 }
 
@@ -76,10 +76,11 @@ aside li{
 
     }
 
-    #main_top{
+    /* #main_top{
         height: 200px;
+        padding: 0;
        
-    }
+    } */
 
     #main_content_bottom{
         width: calc(100% - 50px );
